--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 03:39:00 PM</p>
+    <p class="lastupdate">09/16/2020 03:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.7&#176;F</td>
+        <td class="data">93.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.7&#176;F</td>
+        <td class="data">93.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.7&#176;F</td>
+        <td class="data">93.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">26.3&#176;F</td>
+        <td class="data">23.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">9%</td>
+        <td class="data">8%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.912 inHg (-0.074)</td>
+        <td class="data">29.910 inHg (-0.076)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">12 mph SSW (202&#176;)</td>
+        <td class="data">10 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="12:23:43 PM">
             50.9</span><br/>
-          <span title="03:39:00 PM">
-            26.3</span>
+          <span title="03:41:24 PM">
+            23.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="03:39:00 PM (Wednesday)">
-            26.3</span>
+          <span title="03:41:24 PM (Wednesday)">
+            23.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/12/2020 04:19:40 PM">
-            23.3</span>
+          <span title="09/16/2020 03:41:24 PM">
+            23.2</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="03:36:04 PM">
-            9</span>
+          <span title="03:41:12 PM">
+            8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
             95</span><br/>
-          <span title="03:36:04 PM (Wednesday)">
-            9</span>
+          <span title="03:41:12 PM (Wednesday)">
+            8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
             95</span><br/>
-          <span title="09/06/2020 04:59:20 PM">
-            9</span>
+          <span title="09/16/2020 03:41:12 PM">
+            8</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:38:02 PM">
-            77.6</span><br/>
+          <span title="03:41:02 PM">
+            77.7</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 0 hours, 52 minutes</td>
+      <td class="data">15 days, 0 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 0 hours, 52 minutes</td>
+      <td class="data">15 days, 0 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
