--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 03:44:00 PM</p>
+    <p class="lastupdate">09/16/2020 03:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.4&#176;F</td>
+        <td class="data">93.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.4&#176;F</td>
+        <td class="data">93.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.4&#176;F</td>
+        <td class="data">93.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">23.3&#176;F</td>
+        <td class="data">29.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">8%</td>
+        <td class="data">10%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.076)</td>
+        <td class="data">29.910 inHg (-0.075)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph S (180&#176;)</td>
+        <td class="data">9 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.7&#176;F</td>
+        <td class="data">78.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">31%</td>
       </tr>
     </tbody>
   </table>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="03:17:01 PM">
-            29.910</span>
+          <span title="03:46:02 PM">
+            29.908</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          192
+          191
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:41:02 PM">
-            77.7</span><br/>
+          <span title="03:48:02 PM">
+            78.0</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="10:31:01 AM">
             36</span><br/>
-          <span title="12:00:04 AM">
-            32</span>
+          <span title="03:45:02 PM">
+            31</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 0 hours, 57 minutes</td>
+      <td class="data">15 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 0 hours, 57 minutes</td>
+      <td class="data">15 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
