--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 03:49:00 PM</p>
+    <p class="lastupdate">09/16/2020 03:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">29.0&#176;F</td>
+        <td class="data">23.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">10%</td>
+        <td class="data">8%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.075)</td>
+        <td class="data">29.910 inHg (-0.071)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">13 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.0&#176;F</td>
+        <td class="data">78.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:48:02 PM">
-            78.0</span><br/>
+          <span title="03:52:02 PM">
+            78.2</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 1 hour, 2 minutes</td>
+      <td class="data">15 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 1 hour, 2 minutes</td>
+      <td class="data">15 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
