--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 03:54:00 PM</p>
+    <p class="lastupdate">09/16/2020 03:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.8&#176;F</td>
+        <td class="data">93.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.8&#176;F</td>
+        <td class="data">93.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.8&#176;F</td>
+        <td class="data">93.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">23.6&#176;F</td>
+        <td class="data">26.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">8%</td>
+        <td class="data">9%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.071)</td>
+        <td class="data">29.910 inHg (-0.068)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">13 mph SSW (202&#176;)</td>
+        <td class="data">7 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.2&#176;F</td>
+        <td class="data">78.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">30%</td>
       </tr>
     </tbody>
   </table>
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="12:23:43 PM">
             50.9</span><br/>
-          <span title="03:41:24 PM">
-            23.2</span>
+          <span title="03:57:06 PM">
+            23.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="03:41:24 PM (Wednesday)">
-            23.2</span>
+          <span title="03:57:06 PM (Wednesday)">
+            23.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/16/2020 03:41:24 PM">
-            23.2</span>
+          <span title="09/16/2020 03:57:06 PM">
+            23.1</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:52:02 PM">
-            78.2</span><br/>
+          <span title="03:58:02 PM">
+            78.5</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="10:31:01 AM">
             36</span><br/>
-          <span title="03:45:02 PM">
-            31</span>
+          <span title="03:57:02 PM">
+            30</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 1 hour, 7 minutes</td>
+      <td class="data">15 days, 1 hour, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 1 hour, 7 minutes</td>
+      <td class="data">15 days, 1 hour, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
