--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 03:59:00 PM</p>
+    <p class="lastupdate">09/16/2020 04:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.2&#176;F</td>
+        <td class="data">93.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.2&#176;F</td>
+        <td class="data">93.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.2&#176;F</td>
+        <td class="data">93.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">26.0&#176;F</td>
+        <td class="data">25.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.068)</td>
+        <td class="data">29.913 inHg (-0.063)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.5&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
-          191
+          1<br/>
+          192
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:58:02 PM">
-            78.5</span><br/>
+          <span title="04:02:02 PM">
+            78.7</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 1 hour, 12 minutes</td>
+      <td class="data">15 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 1 hour, 12 minutes</td>
+      <td class="data">15 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
