--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/16/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.1&#176;F</td>
+        <td class="data">93.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.1&#176;F</td>
+        <td class="data">93.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.1&#176;F</td>
+        <td class="data">93.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">25.9&#176;F</td>
+        <td class="data">28.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">9%</td>
+        <td class="data">10%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.913 inHg (-0.063)</td>
+        <td class="data">29.912 inHg (-0.063)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph SSW (202&#176;)</td>
+        <td class="data">8 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.7&#176;F</td>
+        <td class="data">78.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:02:02 PM">
-            78.7</span><br/>
+          <span title="04:07:02 PM">
+            78.9</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 1 hour, 17 minutes</td>
+      <td class="data">15 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 1 hour, 17 minutes</td>
+      <td class="data">15 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
