--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 04:29:00 PM</p>
+    <p class="lastupdate">09/16/2020 04:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">92.6&#176;F</td>
+        <td class="data">93.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">92.6&#176;F</td>
+        <td class="data">93.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">92.6&#176;F</td>
+        <td class="data">93.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">32.6&#176;F</td>
+        <td class="data">32.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.908 inHg (-0.060)</td>
+        <td class="data">29.906 inHg (-0.056)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph S (180&#176;)</td>
+        <td class="data">8 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.9&#176;F</td>
+        <td class="data">80.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">28%</td>
       </tr>
     </tbody>
   </table>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="04:25:02 PM">
-            29.907</span>
+          <span title="04:29:02 PM">
+            29.905</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:27:02 PM">
-            79.9</span><br/>
+          <span title="04:31:02 PM">
+            80.1</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="10:31:01 AM">
             36</span><br/>
-          <span title="04:13:02 PM">
-            29</span>
+          <span title="04:31:02 PM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 1 hour, 42 minutes</td>
+      <td class="data">15 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 1 hour, 42 minutes</td>
+      <td class="data">15 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
