--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 04:49:00 PM</p>
+    <p class="lastupdate">09/16/2020 04:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.6&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.6&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.6&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">22.0&#176;F</td>
+        <td class="data">27.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">8%</td>
+        <td class="data">10%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.908 inHg (-0.043)</td>
+        <td class="data">29.906 inHg (-0.043)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">11 mph S (180&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.5&#176;F</td>
+        <td class="data">80.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="12:23:43 PM">
             50.9</span><br/>
-          <span title="04:48:40 PM">
-            22.0</span>
+          <span title="04:50:46 PM">
+            21.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="04:48:40 PM (Wednesday)">
-            22.0</span>
+          <span title="04:50:46 PM (Wednesday)">
+            21.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/16/2020 04:48:40 PM">
-            22.0</span>
+          <span title="09/16/2020 04:50:46 PM">
+            21.8</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:43:02 PM">
-            80.5</span><br/>
+          <span title="04:50:02 PM">
+            80.6</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 2 hours, 2 minutes</td>
+      <td class="data">15 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 2 hours, 2 minutes</td>
+      <td class="data">15 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
