--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 04:54:00 PM</p>
+    <p class="lastupdate">09/16/2020 04:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">27.1&#176;F</td>
+        <td class="data">24.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">10%</td>
+        <td class="data">9%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.906 inHg (-0.043)</td>
+        <td class="data">29.905 inHg (-0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph SSW (202&#176;)</td>
+        <td class="data">10 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.6&#176;F</td>
+        <td class="data">80.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          3</td>
+          4</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -452,11 +452,11 @@
         </td>
         <td class="data new_row hilo_year">
           2<br/>
-          211
+          210
         </td>
         <td class="data new_row hilo_rainyear">
           2<br/>
-          211
+          210
         </td>
         <td class="units">
            mph<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 2 hours, 7 minutes</td>
+      <td class="data">15 days, 2 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 2 hours, 7 minutes</td>
+      <td class="data">15 days, 2 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
