--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 05:24:00 PM</p>
+    <p class="lastupdate">09/16/2020 05:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">89.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">89.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">89.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">30.6&#176;F</td>
+        <td class="data">28.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">11%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.905 inHg (-0.024)</td>
+        <td class="data">29.903 inHg (-0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">11 mph S (180&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.8&#176;F</td>
+        <td class="data">80.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="05:05:02 PM">
-            29.904</span>
+          <span title="05:27:02 PM">
+            29.903</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="05:20:02 PM">
-            80.8</span><br/>
+          <span title="05:24:02 PM">
+            80.9</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 2 hours, 37 minutes</td>
+      <td class="data">15 days, 2 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 2 hours, 37 minutes</td>
+      <td class="data">15 days, 2 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
